--- a/zhdanov.html
+++ b/zhdanov.html
@@ -22,6 +22,7 @@
     </div>
     <div class="grid-item visible button-con">
         <div class="buttonDiv">
+            <button class="skok" id="skok" onclick="gameStart()">Skok</button>
             <button class="mars" id="mars">Mars</button>
             <button class="księżyc" id="księżyc">Księżyc</button>
             <button class="germania" id="germania">Germania</button>
